--- a/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
@@ -6,9 +6,8 @@
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
