--- a/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
@@ -7,68 +7,51 @@
 
 }
 
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
+            <partial name="ANav" />
             <div class="col-md-9">
-                <div class="cont">
-                    <div class="container">
-                        <div>
-                            <h1>Edit Event</h1>
-                        </div>
+                <div class="row justify-content-center">
+
+                    <div>
+                        <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Edit Event</h1>
+                        <img src="~/images/events/@Model.Event.Image">
                     </div>
+
+
+
+
+                    
                 </div>
-
-
-
-                <div class="cart container">
-                    <div class="card mb-3" style="width: 36rem;">
-                        <img class="card-img-top" src="~/images/events/@Model.Event.Image" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">@Model.Event.Title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <input type="hidden" asp-for="Event.Id" />
-                                <div class="form-group">
-                                    <label asp-for="Event.Title" class="control-label"></label>
-                                    <input asp-for="Event.Title" class="form-control" />
-                                    <span asp-validation-for="Event.Title" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Event.text" class="control-label"></label>
-                                    <input asp-for="Event.text" class="form-control" />
-                                    <span asp-validation-for="Event.text" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="file" name="files" value="Event.Image" multiple />
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Save" class="btn btn-primary" />
-                                </div>
-                                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
-                            </form>
+                        
+                <div style="padding: 20px;">
+                    <h5 class="">@Model.Event.Title</h5>
+                    <p class="card-text">@Model.Event.Title</p>
+                    <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="Event.Id" />
+                        <div class="form-group">
+                            <label asp-for="Event.Title" class="control-label"></label>
+                            <input asp-for="Event.Title" class="form-control" />
+                            <span asp-validation-for="Event.Title" class="text-danger"></span>
                         </div>
-                    </div>
+                        <div class="form-group">
+                            <label class="control-label">Text</label>
+                            <textarea textarea asp-for="Event.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input type="file" name="files" value="Event.Image" multiple />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                        <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                    </form>
+                </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
