--- a/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
@@ -18,7 +18,7 @@
 
                     <div>
                         <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Edit Event</h1>
-                        <img src="~/images/events/@Model.Event.Image">
+                        <img src="~/images/events/@Model.Event.Image" style="padding:20px">
                     </div>
 
 
