--- a/Areas/Identity/Pages/Account/Admin/FAQS/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/FAQS/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="col-md-9 center">
                 <div class="row justify-content-center">
 
-                    <h2 class="heading"><a asp-page="Create">Create New Event</a></h2>
+                    <h2 class="heading"><a asp-page="Create">Create New Answer</a></h2>
 
                     @if (Model.FAQ.Count > 0)
                     {
