--- a/Areas/Identity/Pages/Account/Admin/ANav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ANav.cshtml
@@ -13,7 +13,7 @@
         <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
         <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
         <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-        <!--<a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>-->
+        <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
         <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
         <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
     </div>
