--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
@@ -4,32 +4,19 @@
 @{
     ViewData["Title"] = "Create";
 }
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card container" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="cont">                  
+            <partial name="ANav" />
+            <div class="col-md-9 center">
+                <div class="row justify-content-center">
+                    <div class="col-md-9">
                         <div>
-                            <h1>Create Boardmembers</h1>
-                        </div>               
-                    <div class="row">
-                       
+                            <h2 class="heading">Create Boardmember</h2>
+                        </div>
+
                         <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
@@ -43,6 +30,7 @@
                                 <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
                             </div>
                             <div class="form-group">
+                                <label>Text</label>
                                 <textarea textarea asp-for="BoardMember.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <div class="form-group">
@@ -51,12 +39,10 @@
                             <div class="form-group">
                                 <input type="submit" value="Create" class="btn btn-primary" />
                             </div>
-                        </form>                   
+                            <a class="btn btn-secondary" asp-page="Index">Back to List</a>
+                        </form>
                     </div>
                 </div>
-                <div>
-                    <a class="btn btn-secondary"asp-page="Index">Back to List</a>
-                </div>              
             </div>
         </div>
     </div>
