--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Edit.cshtml
@@ -4,61 +4,58 @@
 @{
     ViewData["Title"] = "Edit";
 }
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card container" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="list-group">
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-            </div>
+            <partial name="ANav" />
             <div class="col-md-9">
-                <div class="cont">
-                    <div>
-                        <h2>Edit Boardmember</h2>
-                    </div>
+                <div class="row justify-content-center">
 
-                    <div class="row">
-                        <div class="col-md-4">
-                            <form method="post">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <input type="hidden" asp-for="BoardMember.Id" />
-                                <div class="form-group">
-                                    <label asp-for="BoardMember.Name" class="control-label"></label>
-                                    <input asp-for="BoardMember.Name" class="form-control" />
-                                    <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="BoardMember.BoardRole" class="control-label"></label>
-                                    <input asp-for="BoardMember.BoardRole" class="form-control" />
-                                    <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="BoardMember.Image" class="control-label"></label>
-                                    <input asp-for="BoardMember.Image" class="form-control" />
-                                    <span asp-validation-for="BoardMember.Image" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Save" class="btn btn-primary" />
-                                </div>
-                            </form>
+                    <div>
+                        <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Edit Board</h1>
+                        @if (Model.BoardMember.Image == "")
+                        {
+
+                        }
+                        else
+                        {
+                            <img src="~/images/boardmembers/@Model.BoardMember.Image" style="padding:20px">
+                        }
+                    </div>
+                </div>
+
+                <div style="padding: 20px;">
+                    <div class="card-body">
+                    <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="BoardMember.Id" />
+                        <div class="form-group">
+                            <label asp-for="BoardMember.Name" class="control-label"></label>
+                            <input asp-for="BoardMember.Name" class="form-control" />
+                            <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
                         </div>
-                    </div>
-
-                    <div>
+                        <div class="form-group">
+                            <label asp-for="BoardMember.BoardRole" class="control-label"></label>
+                            <input asp-for="BoardMember.BoardRole" class="form-control" />
+                            <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Text</label>
+                            <textarea textarea asp-for="BoardMember.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input type="file" name="files" value="BoardMember.Image" multiple />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
                         <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+    </div>
