--- a/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
@@ -5,29 +5,17 @@
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-<div class="card" id="containerLayout" style="padding: 20px">
+<div class="card container" id="containerLayout" style="padding: 20px">
     <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
+            <partial name="ANav" />
             <div class="col-md-9 center">
                 <div class="row justify-content-center">
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div>
-                            <h2 class="">Create Event</h2>
+                            <h2 class="heading">Create Event</h2>
                         </div>
                         <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -37,9 +25,8 @@
                                 <span asp-validation-for="Event.Title" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Event.text" class="control-label"></label>
-                                <input type="text" asp-for="Event.text" class="form-control" />
-                                <span asp-validation-for="Event.text" class="text-danger"></span>
+                                <label class="control-label">Text</label>
+                                <textarea textarea asp-for="Event.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Event.eventLink" class="control-label"></label>
@@ -62,16 +49,12 @@
                             <div class="form-group">
                                 <input type="submit" value="Create" class="btn btn-primary" />
                             </div>
+                            <a class="btn btn-secondary" asp-page="Index">Back to List</a>
                         </form>
                     </div>
                 </div>
 
             </div>
-
-
-                <div>
-                    <a class="btn btn-secondary" asp-page="Index">Back to List</a>
-                </div>
-            </div>
         </div>
     </div>
+</div>
