--- a/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
@@ -6,48 +6,42 @@
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<div class="card" id="containerLayout" style="padding: 20px">
+<div class="card container" id="containerLayout" style="padding: 20px">
     <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
+            <partial name="ANav" />
             <div class="col-md-9">
-                <div class="cont">
-                    <div class="container">
-                        <div>
-                            <h1>Delete Event</h1>
-                            <h3>Are you sure you want to delete this?</h3>
-                        </div>
+                <div class="row justify-content-center">
+
+                    <div>
+                        <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Details</h1>
+                        <p class="text-center">Are you sure you wan't to delete this?</p>
+                        @if (Model.Event.Image == "")
+                        {
+
+                        }
+                        else
+                        {
+                            <img src="~/images/events/@Model.Event.Image" style="padding:20px">
+                        }
                     </div>
                 </div>
-
-
-                <div class="cart container">
-                    <div class="card mb-3" style="width: 36rem;">
-                        <img class="card-img-top" src="~/images/events/@Model.Event.Image" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">@Model.Event.Title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <form method="post">
-                                <input type="hidden" asp-for="Event.Id" />
-                                <input type="submit" value="Delete" class="btn btn-primary" /> |
-                                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
-                            </form>
-                        </div>
+                <div style="padding: 20px;">
+                    <div class="card-body">
+                        <p>Title</p>
+                        <h5 class="card-title">@Model.Event.Title</h5>
+                        <p>Text</p>
+                        <p class="card-text">@Model.Event.text</p>
+                        <a href="@Model.Event.eventLink">@Model.Event.eventLink</a>
+                        <br />
+                        <br />
+                        <form method="post">
+                            <input type="hidden" asp-for="Event.Id" />
+                            <input type="submit" value="Delete" class="btn btn-primary" />
+                            <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                        </form>
                     </div>
                 </div>
             </div>
