--- a/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
@@ -18,41 +18,42 @@
 
                     <div>
                         <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Edit Event</h1>
-                        @if(Model.Event.Image == "")
+                        @if (Model.Event.Image == "")
                         {
 
-                        } else
+                        }
+                        else
                         {
-                        <img src="~/images/events/@Model.Event.Image" style="padding:20px">
+                            <img src="~/images/events/@Model.Event.Image" style="padding:20px">
                         }
                     </div>
                 </div>
-                        
+
                 <div style="padding: 20px;">
-                    <h5 class="">Title: @Model.Event.Title</h5>
-                    <p class="card-text">Text: @Model.Event.Title</p>
-                    <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input type="hidden" asp-for="Event.Id" />
-                        <div class="form-group">
-                            <label asp-for="Event.Title" class="control-label"></label>
-                            <input asp-for="Event.Title" class="form-control" />
-                            <span asp-validation-for="Event.Title" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Text</label>
-                            <textarea textarea asp-for="Event.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <input type="file" name="files" value="Event.Image" multiple />
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" value="Save" class="btn btn-primary" />
-                        </div>
-                        <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
-                    </form>
-                </div>
+                    <div class="card-body">
+                        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <input type="hidden" asp-for="Event.Id" />
+                            <div class="form-group">
+                                <label asp-for="Event.Title" class="control-label"></label>
+                                <input asp-for="Event.Title" class="form-control" />
+                                <span asp-validation-for="Event.Title" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Text</label>
+                                <textarea textarea asp-for="Event.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <input type="file" name="files" value="Event.Image" multiple />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Save" class="btn btn-primary" />
+                            </div>
+                            <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
