--- a/Areas/Identity/Pages/Account/Admin/FAQS/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/FAQS/Delete.cshtml
@@ -5,51 +5,34 @@
     ViewData["Title"] = "Delete";
 }
 
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card container" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action " href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
-            <div class="col-md-9">                
-                <h3>Are you sure you want to delete this ?</h3>
-                <div>
-                    <hr />
-                    <dl class="dl-horizontal">
-                        <dt>
-                            @Html.DisplayNameFor(model => model.FAQ.questions)
-                        </dt>
-                        <dd>
-                            @Html.DisplayFor(model => model.FAQ.questions)
-                        </dd>
-                        <dt>
-                            @Html.DisplayNameFor(model => model.FAQ.answers)
-                        </dt>
-                        <dd>
-                            @Html.DisplayFor(model => model.FAQ.answers)
-                        </dd>
-                    </dl>
+            <partial name="ANav" />
+            <div class="col-md-9">
+                <div class="row justify-content-center">
 
-                    <form method="post">
-                        <input type="hidden" asp-for="FAQ.Id" />
-                        <input type="submit" value="Delete" class="btn btn-primary" /> |
-                        <a asp-page="./Index">Back to List</a>
-                    </form>
+                    <div>
+                        <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Delete</h1>
+                        <p class="text-center">Are you sure you wan't to delete this?</p>
+                    </div>
+                </div>
+                <div style="padding: 20px;">
+                    <div class="card-body">
+                        <p>Question</p>
+                        <h5 class="card-title">@Model.FAQ.questions</h5>
+                        <p>Answer</p>
+                        <p class="card-text">@Model.FAQ.answers</p>
+                        <form method="post">
+                            <input type="hidden" asp-for="FAQ.Id" />
+                            <input type="submit" value="Delete" class="btn btn-primary" />  
+                            <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    </div>
