--- a/Areas/Identity/Pages/Account/Admin/FAQS/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/FAQS/Details.cshtml
@@ -4,47 +4,34 @@
 @{
     ViewData["Title"] = "Details";
 }
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card container" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action " href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
+            <partial name="ANav" />
             <div class="col-md-9">
-                <div class="row">
-                    <dl class="dl-horizontal">
-                        <dt>
-                            @Html.DisplayNameFor(model => model.FAQ.questions)
-                        </dt>
-                        <dd>
-                            @Html.DisplayFor(model => model.FAQ.questions)
-                        </dd>
-                        <dt>
-                            @Html.DisplayNameFor(model => model.FAQ.answers)
-                        </dt>
-                        <dd>
-                            @Html.DisplayFor(model => model.FAQ.answers)
-                        </dd>
-                    </dl>
+                <div class="row justify-content-center">
+
+                    <div>
+                        <h1 class="text-center" style="margin-top:20px; margin-bottom: 20px;">Details</h1>
+                    </div>
                 </div>
-                <div>
-                    <a asp-page="./Edit" asp-route-id="@Model.FAQ.Id">Edit</a> |
-                    <a asp-page="./Index">Back to List</a>
+                <div style="padding: 20px;">
+                    <div class="card-body">
+                        <p>Question</p>
+                        <h5 class="card-title">@Model.FAQ.questions</h5>
+                        <p>Answer</p>
+                        <p class="card-text">@Model.FAQ.answers</p>
+                        <br />
+                        <br />
+                        <a class="btn btn-primary" asp-page="./Edit" asp-route-id="@Model.FAQ.Id">Edit</a>
+                        <a class="btn btn-primary" asp-page="./Delete" asp-route-id="@Model.FAQ.Id">Delete</a>
+                        <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                        
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
