--- a/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
@@ -5,67 +5,43 @@
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-<div class="container" id="containerLayout">
-
-    <h2>Manage your Admin account</h2>
+<div class="card container" id="containerLayout" style="padding: 20px">
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="cont">
-                    <div class="container">
-                        <div>
-                            <h1>Create News</h1>
-                        </div>
+            <partial name="ANav" />
+            <div class="col-md-9 center">
+                <div class="row justify-content-center">
+                    <h1 class="heading">Create News</h1>
+                    <div class="col-md-9">
+                        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label asp-for="Grant.Title" class="control-label"></label>
+                                <input asp-for="Grant.Title" class="form-control" />
+                                <span asp-validation-for="Grant.Title" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Text</label>
+                                <textarea textarea asp-for="Grant.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <input type="file" name="files" multiple />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Create" class="btn btn-primary" />
+                            </div>
+                            <a class="btn btn-secondary" asp-page="Index">Back to List</a>
+
+                        </form>
                     </div>
                 </div>
 
-                <div class="cart container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                <div class="form-group">
-                                    <label asp-for="Grant.Title" class="control-label"></label>
-                                    <input asp-for="Grant.Title" class="form-control" />
-                                    <span asp-validation-for="Grant.Title" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Grant.text" class="control-label"></label>
-                                    <input asp-for="Grant.text" class="form-control" />
-                                    <span asp-validation-for="Grant.text" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <input type="file" name="files" multiple />
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Create" class="btn btn-primary" />
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-                </div>
-
-
-                <div>
-                    <a class="btn btn-secondary" asp-page="Index">Back to List</a>
-                </div>
             </div>
+
+
         </div>
     </div>
+</div>
 </div>
               
